--- a/home/css/home.css
+++ b/home/css/home.css
@@ -8,54 +8,63 @@
 body {
     
     font-family: 'Courier New', Courier, monospace;
-    line-height: 1.5;
+    line-height: 1.4;
     min-height: 100vh;
-   
     background: rgb(248, 234, 208);
     color: #000;
+}
+
+header {
 
 }
+
+main {
+   
+    font-size: 1.25rem;
+    color: rgb(0,0, 0,);
+    
+}
+
+
+a {
+    text-decoration: none;
+}
+
+
 
 .container {
     border: 10px double rgb(178, 81, 231);
     font-size: 1.5rem;
-    margin: 1.5em;
+    margin: 1.5em auto;
     padding: 1.5em;
     outline: 3px solid purple;
     outline-offset: -15px;
+    text-align: center;
 
+}
+
+button, form {
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: bold;
+    
 }
 
 
 
 
-
-main {
-   
-    font-size: 2rem;
-}
-
-
-
-p {
-    color: rgb(0,0, 0,);
-    font-size: 2rem;
-}
-
-
-.services {
+.intro {
     border: 2px none ;
     /* background-color: lightblue; */
     width: 39ch;
     padding: 2em;
+    text-align: justify;
+    text-indent: 1em;
 }
 
-.certificates {
-    width: 39ch;
-    border: 2px navajowhite ;
-    padding: 2em;
-    
-}
+
+
+
 
 .CPR {
     padding: 3rem;
